# pydeployhelp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  upload_to_pypi.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: publish-to-pypi.yml  release.yml
doc/source/modules/: index.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/modules/: index.rst
pydeployhelp/: __init__.py  base.py  deploy.py  quickstart.py  utils.py
requirements/: build_requirements.sh  dev.txt  prod.txt
requirements/in/: common.in  dev.in
