[project]
name = "pydeployhelp"
authors = [
    {name = "Ihar Yazerski", email = "ihar.yazerski@gmail.com"},
]
description = "CLI tool that helps integrating deploy (via Docker) to Python projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies", "optional-dependencies"]


[project.scripts]
pydeployhelp = "pydeployhelp.deploy:run"
pydeployhelp-quickstart = "pydeployhelp.quickstart:run"


[project.urls]
"Homepage" = "https://github.com/iyazerski/pydeployhelp"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pydeployhelp"
version = "0.1.5"
description = "CLI tool that helps integrating deploy (via Docker) to Python projects"
authors = ["Ihar Yazerski <ihar.yazerski@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
pre-commit = "^4.0.1"
ruff = "^0.6.9"
