[project]
name = "pydeployhelp"
version = "1.4.3"
dependencies = [
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "ruamel-yaml>=0.18.14",
    "typer-slim>=0.16.0",
]
requires-python = ">=3.11"
authors = [
    {name = "Ihar Yazerski", email = "ihar.yazerski@gmail.com"},
]
description = "CLI tool that helps integrating deploy (via Docker) to Python projects"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]

[project.urls]
Homepage = "https://github.com/iyazerski/pydeployhelp"
Repository = "https://github.com/iyazerski/pydeployhelp"

[project.scripts]
pydeployhelp = "pydeployhelp.deploy:run"
pydeployhelp-quickstart = "pydeployhelp.quickstart:run"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = ["ALL"]
lint.ignore = ["TRY", "PGH", "D", "DOC", "TD", "C90", "FLY", "EM", "G", "PERF401", "DTZ", "RET501", "COM", "S101", "FBT", "PLR2004", "SIM108", "PLR0913", "BLE001", "ANN401", "FIX002", "FA102", "E501", "B905", "PLR0912", "PLR0911", "N999"]
lint.isort.combine-as-imports = true
format.quote-style = "double"
